--- a/web_static/styles/103-footer.css
+++ b/web_static/styles/103-footer.css
@@ -1,16 +1,16 @@
 /*
  * === Footer style ===
  */
-
 /* Footer style */
 footer {
+            border-top: 1px solid #CCCCCC;
             text-align: center;
-            background-color: #0f0;
+            background-color: #ffffff;
             height: 60px;
             width: 100%;
             bottom: 0;
             justify-content: center;
-            position: absolute;
+            position: relative;
             align-items: center;
             display: flex;
 }
